--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
   <link rel="stylesheet" href="./dist/css/app.css">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Teambit Clone</title>
 </head>
 <body>
+  
   <!-- js and frameworks -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
   <script src="./dist/js/app.js"></script>
