--- a/index.html
+++ b/index.html
@@ -8,7 +8,30 @@
   <title>Teambit Clone</title>
 </head>
 <body>
-  
+  <div id="app">
+    <header>
+     <div id="header_nav">
+      <div id="logo">
+        <img src="./dist/images/logo.svg" alt="logo immagine navbar">
+      </div>
+      <nav id="nav_bar">
+        <ul>
+          <li>Menu1</li>
+          <li>Menu2</li>
+          <li>Menu3</li>
+          <li>Men4</li>
+          <li><button><img src="dist/images/google-logo.svg" alt=""> Sign Up</button></li>
+        </ul>
+      </nav>
+     </div>
+    </header>
+    <main>
+
+    </main>
+    <footer>  
+
+    </footer>
+  </div>
   <!-- js and frameworks -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script> -->
   <script src="./dist/js/app.js"></script>
