--- a/index.html
+++ b/index.html
@@ -26,7 +26,21 @@
      </div>
     </header>
     <main>
-
+      <div id="banner">
+        <div class="info_banner">
+          <h1>Lorem ipsum dolor sit amet.</h1>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, dolorem! Perspiciatis atque quas porro quasi.</p>
+          <div class="sign_banner">
+            <button><img src="./dist/images/google-logo.svg" alt=""> bottone1</button>
+            <span>&</span>
+            <button><img src="./dist/images/slack-logo.svg" alt=""> bottone2</button>
+            <p>Lorem ipsum dolor sit amet consectetur </p>
+          </div>
+        </div>
+        <div class="img_banner">
+          <img src="./dist/images/illustration-main.jpg" alt="illustration banner">
+        </div>
+      </div>
     </main>
     <footer>  
 
