tablet responsive navbar e banner

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <li><button><img src="dist/images/google-logo.svg" alt=""> Sign Up</button></li>
         </ul>
       </nav>
+      <div class="hamburger"><i class="fas fa-bars"></i></div>
      </div>
     </header>
     <main>
@@ -34,14 +35,20 @@
             <button><img src="./dist/images/google-logo.svg" alt=""> bottone1</button>
             <span>&</span>
             <button><img src="./dist/images/slack-logo.svg" alt=""> bottone2</button>
-            <p>Lorem ipsum dolor sit amet consectetur </p>
           </div>
+          <p>Lorem ipsum dolor sit amet consectetur </p>
         </div>
         <div class="img_banner">
           <img src="./dist/images/illustration-main.jpg" alt="illustration banner">
         </div>
       </div>
     </main>
+    <section class="business_explain">
+      <div class="businnes_a">
+        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum.</h2>
+      </div>
+      <div class="business_b"></div>
+    </section>
     <footer>  
 
     </footer>
