sezione immagini completata

--- a/index.html
+++ b/index.html
@@ -45,7 +45,63 @@
     </main>
     <section class="business_explain">
       <div class="businnes_a">
-        <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, earum.</h2>
+        <h2>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, laboriosam quibusdam? Optio repellat odio magnam.
+        </h2>
+        <div class="images_business">
+          <div class="card">
+            <img src="./dist/images/hardcore.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+          <div class="card">
+            <img src="./dist/images/feedbacksuggestions.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+          <div class="card">
+            <img src="./dist/images/notsafe.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+        </div>
+        <!-- alone img -->
+        <img src="./dist/images/before.png" alt="">
+        <!-- /alone img -->
+      </div>
+      <!-- /first part business -->
+      <hr>
+      <!-- second part business -->
+      <div class="businnes_b">
+        <h2>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, laboriosam quibusdam? Optio repellat odio magnam.
+        </h2>
+        <div class="images_business">
+          <div class="card">
+            <img src="./dist/images/hardcore.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+          <div class="card">
+            <img src="./dist/images/feedbacksuggestions.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+          <div class="card">
+            <img src="./dist/images/notsafe.png" alt="">
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, dolores.
+          </p>
+          </div>
+        </div>
+         <!-- alone img -->
+         <img src="./dist/images/after.png" alt="">
+         <!-- /alone img -->
       </div>
       <div class="business_b"></div>
     </section>
