colore bg aggiornato

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.2/css/all.css" integrity="sha384-vSIIfh2YWi9wW0r9iZe7RJPrKwp6bG+s9QZMoITbCckVJqGCCRhc+ccxNcdpHuYu" crossorigin="anonymous">
   <link rel="stylesheet" href="./dist/css/app.css">
   <meta charset="UTF-8">
@@ -73,7 +75,7 @@
         <!-- /alone img -->
       </div>
       <!-- /first part business -->
-      <hr>
+      <div class="separator"></div>
       <!-- second part business -->
       <div class="businnes_b">
         <h2>
@@ -103,8 +105,10 @@
          <img src="./dist/images/after.png" alt="">
          <!-- /alone img -->
       </div>
+      <h2>How it works</h2>
       <div class="business_b"></div>
     </section>
+    <section class="function_sect"></section>
     <footer>  
 
     </footer>
